--- a/WEB_APP/front_end/src/App.css
+++ b/WEB_APP/front_end/src/App.css
@@ -1,5 +1,92 @@
 .App {
   text-align: center;
+  background-color:#323238;
+}
+
+html{
+  background-color: #9CBD5E;
+  height: 100%;
+  justify-content: flex-end;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+body{
+  overflow: auto;
+  height:100%;
+  width:100%;
+  background-color: #323238;
+  font-family: "Roboto Slab";
+  height: 99%;
+    width: 100%;
+    background-color: #323238;
+    font-family: "Roboto Slab";
+}
+
+.topLeftName{
+  position: absolute;
+  left: 0.6em;
+  top: 3vh;
+  color: #EBCD8F;
+  font-size: 3em;
+}
+
+.code{
+  text-decoration: underline;
+  text-decoration-color: #9CBD5E;
+  text-underline-offset: .25em;
+  color:#DEC6B2;
+}
+
+.alertsContainer{
+  display:flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  width:100%;
+  flex-direction: column;
+}
+
+.alert{
+  display: flex;
+  margin:1em;
+  background-color: #DEC6B2;
+  border-radius: 1em;
+  font-size: 1.2em;
+  width: 80%;
+  padding-top: 2em;
+  padding-bottom: 2em;
+  max-width: 1000px;
+}
+
+.alertLargeText{
+  margin-bottom: 0;
+  color: #323238;
+  font-size: 3em;
+  padding: 0.25em;
+}
+
+.alertLeft{
+  width:20%;
+}
+
+.alertRight{
+  width:80%;
+}
+
+.contentContainer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 30vh;
+}
+ 
+.contentContainer .contentLines{
+  color:#F7DDC6;
+  font-size:4em;
+  margin-bottom:1.8em;
 }
 
 .App-logo {
