--- a/ANDROID_APP/app/src/main/res/layout/activity_timer.xml
+++ b/ANDROID_APP/app/src/main/res/layout/activity_timer.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".TimerActivity">
 
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:context=".TimerActivity"/>
+
     <include
         android:id="@+id/include2"
         layout="@layout/activity_base"
@@ -13,15 +18,17 @@
         android:layout_height="match_parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_anchor="@+id/include2"
         app:layout_anchorGravity="center">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/centerButton"
             android:layout_width="280dp"
             android:layout_height="280dp"
+            android:layout_marginBottom="200dp"
             android:background="@drawable/green_circle"
             android:fontFamily="@font/roboto_slab"
             android:singleLine="false"
@@ -37,10 +44,18 @@
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="40dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button">
+            app:layout_constraintTop_toBottomOf="@+id/centerButton">
+
+            <SeekBar
+                android:id="@+id/seekBar"
+                android:layout_width="280dp"
+                android:layout_height="40dp"
+                android:progressDrawable="@android:color/transparent"
+                android:thumb="@drawable/seekbar_thumb" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -59,13 +74,6 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
-
-            <SeekBar
-                android:id="@+id/seekBar"
-                android:layout_width="280dp"
-                android:progressDrawable="@android:color/transparent"
-                android:layout_height="40dp"
-                android:thumb="@drawable/seekbar_thumb" />
 
         </FrameLayout>
 
