--- a/WEB_APP/front_end/src/App.css
+++ b/WEB_APP/front_end/src/App.css
@@ -69,10 +69,21 @@ body{
 
 .alertLeft{
   width:20%;
+  display:flex;
+  flex-direction:column;
+  align-items: center;
+}
+
+.alertTime{
+  margin-top:.4em;
 }
 
 .alertRight{
   width:80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .contentContainer{
