--- a/ANDROID_APP/app/src/main/res/layout/activity_base.xml
+++ b/ANDROID_APP/app/src/main/res/layout/activity_base.xml
@@ -29,19 +29,12 @@
         app:layout_anchor="@+id/linearLayout2"
         app:layout_anchorGravity="end|top" />
 
-    <ImageView
-        android:id="@+id/buzz_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <Button
+        android:id="@+id/hamburger"
+        android:layout_width="40dp"
+        android:layout_height="30dp"
         android:layout_marginLeft="30dp"
         android:layout_marginTop="50dp"
-        app:layout_anchor="@+id/linearLayout2"
-        app:layout_anchorGravity="start|top"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.078"
-        app:srcCompat="@drawable/ic_group_5" />
+        android:background="@drawable/ic_group_5" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
