--- a/ANDROID_APP/app/src/main/res/layout/activity_timer.xml
+++ b/ANDROID_APP/app/src/main/res/layout/activity_timer.xml
@@ -7,15 +7,18 @@
     tools:context=".TimerActivity">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/coordinatorLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".TimerActivity"/>
+        tools:context=".TimerActivity" />
 
     <include
         android:id="@+id/include2"
         layout="@layout/activity_base"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:layout_anchor="@+id/coordinatorLayout"
+        app:layout_anchorGravity="center" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout"
@@ -28,7 +31,6 @@
             android:id="@+id/centerButton"
             android:layout_width="280dp"
             android:layout_height="280dp"
-            android:layout_marginBottom="200dp"
             android:background="@drawable/green_circle"
             android:fontFamily="@font/roboto_slab"
             android:singleLine="false"
@@ -36,12 +38,26 @@
             android:textAllCaps="false"
             android:textColor="#FFFFFF"
             android:textSize="40sp"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/tolerance"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
+            android:text="Tolerance (?)"
+            android:textColor="#FFFFFF"
+            android:textSize="18dp"
+            app:layout_constraintBottom_toTopOf="@+id/frameLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/centerButton" />
+
         <FrameLayout
+            android:id="@+id/frameLayout"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_marginTop="20dp"
