--- a/ANDROID_APP/app/src/main/res/layout/activity_code_input.xml
+++ b/ANDROID_APP/app/src/main/res/layout/activity_code_input.xml
@@ -18,6 +18,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/codeInputConstraint"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -25,17 +26,17 @@
             android:id="@+id/enterCodeButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="160dp"
+            android:layout_marginTop="@dimen/_240sdp"
             android:background="@drawable/button"
             android:fontFamily="@font/roboto_slab_bold"
-            android:paddingLeft="40dp"
-            android:paddingTop="15dp"
-            android:paddingRight="40dp"
-            android:paddingBottom="15sp"
+            android:paddingLeft="@dimen/_40sdp"
+            android:paddingTop="@dimen/_15sdp"
+            android:paddingRight="@dimen/_40sdp"
+            android:paddingBottom="@dimen/_15sdp"
             android:text="Submit"
             android:textAllCaps="false"
             android:textColor="#323238"
-            android:textSize="30sp"
+            android:textSize="@dimen/_30sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -49,7 +50,7 @@
             android:text="help (?)"
             android:textAlignment="center"
             android:textColor="#FFFFFF"
-            android:textSize="18dp"
+            android:textSize="@dimen/_18sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />
@@ -58,7 +59,7 @@
             android:id="@+id/linearLayout8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="120dp"
+            android:layout_marginBottom="@dimen/_120sdp"
             android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/enterCodeButton"
             app:layout_constraintEnd_toEndOf="parent"
@@ -71,17 +72,18 @@
                 <EditText
                     android:id="@+id/codeInput"
                     android:layout_width="0dp"
-                    android:layout_height="72dp"
+                    android:layout_height="@dimen/_65sdp"
+                    android:layout_marginTop="@dimen/_10sdp"
                     android:background="@null"
                     android:ems="10"
                     android:fontFamily="@font/roboto_mono"
                     android:inputType="textNoSuggestions|textVisiblePassword"
-                    android:letterSpacing="1.4"
+                    android:letterSpacing="1.08"
                     android:maxLength="6"
                     android:textAlignment="textStart"
                     android:textAllCaps="true"
                     android:textColor="#ffffff"
-                    android:textSize="28sp"
+                    android:textSize="@dimen/_28sdp"
                     app:boxBackgroundMode="none"
                     app:boxStrokeWidth="0dp"
                     app:boxStrokeWidthFocused="0dp"
@@ -98,80 +100,74 @@
                 android:orientation="horizontal">
 
                 <FrameLayout
-                    android:layout_width="44dp"
+                    android:layout_width="@dimen/_36sdp"
                     android:layout_height="match_parent"
-                    android:layout_margin="6dp">
+                    android:layout_margin="@dimen/_6sdp">
 
                     <ImageView
                         android:id="@+id/underline1"
                         android:layout_width="match_parent"
-                        android:layout_height="3dp"
+                        android:layout_height="@dimen/_3sdp"
                         app:srcCompat="@drawable/codeinput0" />
                 </FrameLayout>
 
                 <FrameLayout
-                    android:layout_width="44dp"
+                    android:layout_width="@dimen/_36sdp"
                     android:layout_height="match_parent"
-                    android:layout_margin="6dp">
+                    android:layout_margin="@dimen/_6sdp">
 
                     <ImageView
                         android:id="@+id/underline2"
                         android:layout_width="match_parent"
-                        android:layout_height="3dp"
+                        android:layout_height="@dimen/_3sdp"
                         app:srcCompat="@drawable/codeinput0" />
                 </FrameLayout>
 
                 <FrameLayout
-                    android:layout_width="44dp"
+                    android:layout_width="@dimen/_36sdp"
                     android:layout_height="match_parent"
-                    android:layout_margin="6dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp">
+                    android:layout_margin="@dimen/_6sdp">
 
                     <ImageView
                         android:id="@+id/underline3"
                         android:layout_width="match_parent"
-                        android:layout_height="3dp"
+                        android:layout_height="@dimen/_3sdp"
                         app:srcCompat="@drawable/codeinput0" />
                 </FrameLayout>
 
                 <FrameLayout
-                    android:layout_width="44dp"
+                    android:layout_width="@dimen/_36sdp"
                     android:layout_height="match_parent"
-                    android:layout_margin="6dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp">
+                    android:layout_margin="@dimen/_6sdp">
 
                     <ImageView
                         android:id="@+id/underline4"
                         android:layout_width="match_parent"
-                        android:layout_height="3dp"
+                        android:layout_height="@dimen/_3sdp"
                         app:srcCompat="@drawable/codeinput0" />
                 </FrameLayout>
 
                 <FrameLayout
-                    android:layout_width="44dp"
-                    android:layout_height="10dp"
-                    android:layout_margin="6dp">
+                    android:layout_width="@dimen/_36sdp"
+                    android:layout_height="match_parent"
+                    android:layout_margin="@dimen/_6sdp">
 
                     <ImageView
                         android:id="@+id/underline5"
                         android:layout_width="match_parent"
-                        android:layout_height="3dp"
+                        android:layout_height="@dimen/_3sdp"
                         app:srcCompat="@drawable/codeinput0" />
                 </FrameLayout>
 
                 <FrameLayout
-                    android:layout_width="44dp"
+                    android:layout_width="@dimen/_36sdp"
                     android:layout_height="match_parent"
-                    android:layout_margin="6dp"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp">
+                    android:layout_margin="@dimen/_6sdp">
 
                     <ImageView
                         android:id="@+id/underline6"
                         android:layout_width="match_parent"
-                        android:layout_height="3dp"
+                        android:layout_height="@dimen/_3sdp"
                         app:srcCompat="@drawable/codeinput0" />
                 </FrameLayout>
 
