--- a/ANDROID_APP/app/src/main/res/layout/activity_landing_page.xml
+++ b/ANDROID_APP/app/src/main/res/layout/activity_landing_page.xml
@@ -26,7 +26,7 @@
             android:text="Enter Code"
             android:textAllCaps="false"
             android:textColor="#323238"
-            android:textSize="30sp"
+            android:textSize="@dimen/_30sdp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
