--- a/ANDROID_APP/app/src/main/res/layout/activity_base.xml
+++ b/ANDROID_APP/app/src/main/res/layout/activity_base.xml
@@ -10,7 +10,7 @@
         android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="@dimen/_9sdp"
         android:background="#323238">
 
 
@@ -19,22 +19,22 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="30dp"
+        android:layout_marginTop="@dimen/_40sdp"
+        android:layout_marginRight="@dimen/_30sdp"
         android:fontFamily="@font/roboto_slab"
         android:gravity="end"
         android:text="Buzz"
         android:textColor="#EBCD8F"
-        android:textSize="30sp"
+        android:textSize="@dimen/_30sdp"
         app:layout_anchor="@+id/linearLayout2"
         app:layout_anchorGravity="end|top" />
 
     <Button
         android:id="@+id/hamburger"
-        android:layout_width="40dp"
-        android:layout_height="30dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="50dp"
+        android:layout_width="@dimen/_40sdp"
+        android:layout_height="@dimen/_30sdp"
+        android:layout_marginLeft="@dimen/_30sdp"
+        android:layout_marginTop="@dimen/_40sdp"
         android:background="@drawable/ic_group_5" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
